# libtensor

./: CMakeLists.txt  MathOperations.cpp  README.md  Serialization.cpp  Tensor.cpp  Tensor.h  main.cpp  tensor.cpp  test.cpp  try.cpp
